tests/baselines/reference/functionCall9.errors.txt
tests/cases/compiler/functionCall9.ts(4,11): error TS2345: Argument of type '"bar"' is not assignable to parameter of type 'number'.
tests/cases/compiler/functionCall9.ts(5,1): error TS2572: No overload expects 3 or more arguments. The most likely overload that matches expects 2 arguments.


==== tests/cases/compiler/functionCall9.ts (2 errors) ====
    function foo(a?:string, b?:number){};
    foo('foo', 1); 
    foo('foo'); 
    foo('foo','bar');
              ~~~~~
!!! error TS2345: Argument of type '"bar"' is not assignable to parameter of type 'number'.
    foo('foo', 1, 'bar');
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2572: No overload expects 3 or more arguments. The most likely overload that matches expects 2 arguments.
    foo();